commit temporary version

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,11 @@ spring.datasource.driver-class-name=org.hsqldb.jdbc.JDBCDriver
 spring.datasource.url=jdbc:hsqldb:mem:springboot_centr_cif_razvitiy;
 spring.datasource.username=sa 
 spring.datasource.password=
+
 spring.jpa.hibernate.ddl-auto=create
 
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
 
 #database.init=true
 #jdbc.initLocation=initDB_hsql.sql
