--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,8 @@ spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=create
 
+logging.file.name=application.log
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-#database.init=true
-#jdbc.initLocation=initDB_hsql.sql
-#jpa.showSql=true
-#hibernate.format_sql=true
-#hibernate.use_sql_comments=true
+
